--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="header">
-    <h1>LightSpeed</h1>
+    <h1>ASMap</h1>
     <br>
-    <h5><i>Some catchy headline text</i></h5>
+    <h5><i>ASMap Research and Development</i></h5>
     <br>
     {% include nav.html %}
     <hr>
